<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="8dp"
    android:background="@color/lightPrimary">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/water_photo"
        android:layout_above="@id/button_view_group"
        android:layout_below="@id/header"/>

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/HeaderText"
        android:text="@string/header_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/button_view_group"
        android:layout_below="@id/header"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

            <TextView
                android:layout_margin="8dp"
                android:id="@+id/descriptive_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/PrimaryText"
                android:background="@drawable/landscape_text_view"
                android:text="@string/body_text" />

            <TextView
                android:layout_margin="8dp"
                android:id="@+id/contact_information"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/PrimaryText"
                android:background="@drawable/landscape_text_view"
                android:text="@string/contact_info"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_view_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_email_us"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Button"
            android:text="@string/email_button"
            android:onClick="emailIntent"/>

        <Button
            android:id="@+id/button_call_us"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Button"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/phone_button"
            android:onClick="phoneIntent"/>

        <Button
            android:id="@+id/button_get_directions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Button"
            android:text="@string/map_button"
            android:onClick="mapIntent"/>

    </LinearLayout>

</RelativeLayout>